# Authentication_with_FastAPI

./: README.md
auth-backend/: .gitignore  main.py  pyproject.toml  schemas.py
auth-backend/core/: config.py  database.py
auth-frontend/: package-lock.json  package.json
auth-frontend/src/: App.jsx  index.css
auth-frontend/src/components/: authlayout.jsx  login.jsx  signup.jsx
