[project]
name = "auth-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.129.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg>=3.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
]
